feat(fe): migrate to taikoverse

--- a/packages/client/src/index.html
+++ b/packages/client/src/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>OPCraft</title>
+    <title>TaikoVerse</title>
     <link rel="icon" href="./public/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
